Fotoğraf görüntüleyici işlevselliği jQuery ile yeniden yazıldı. Fotoğraf butonlarına tıklama, yakınlaştırma, uzaklaştırma ve sıfırlama butonları için olay dinleyicileri eklendi. Modal kapandığında fotoğraf ve ölçek sıfırlanıyor. HTML şablonlarına jQuery kütüphanesi eklendi.

--- a/templates/dashboard/gonullu_sorun.html
+++ b/templates/dashboard/gonullu_sorun.html
@@ -326,5 +326,6 @@
 {% endblock %}
 
 {% block extra_js %}
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/static/js/photoViewer.js"></script>
 {% endblock %} 
